# rt_motion_planning

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.txt  Kconfig  README.md  arm_board.overlay  cyclonedds_config.cmake  instructions.txt  prj_actuation.conf  prj_net.conf  questions.txt  todo.txt  west.yml
boards/: s32z270dc2_rtu0_r52.overlay  s32z270dc2_rtu0_r52_actuation.conf
include/: TrajectoryEvaluator.hpp  zephyr_app.hpp
logging/: analyze.py  latency_results.txt  log.py  timings_100_samples.csv  timings_12_samples.csv  timings_32_samples.csv  timings_64_samples.csv
math/: covariance.hpp  mvn.hpp
msg/: CartesianSampleData.c  CartesianSampleData.h  CurvilinearSampleData.c  CurvilinearSampleData.h  ResultData.c  ResultData.h  TrajectorySampleData.c  TrajectorySampleData.h  board_input_data.c  board_input_data.h  board_output_data.c  board_output_data.h  cartesian_sample.c  cartesian_sample.h  curvilinear_sample.c  curvilinear_sample.h
src/: TrajectoryEvaluator.cpp  communication.cpp
src/Clipper2/CPP/: CMakeLists.txt
src/cldc/: CMakeLists.txt
src/cldc/include/geometry/: clcs_exceptions.h  clcs_logger.h  clcs_types.h  curvilinear_coordinate_system.h  path_segments.h  projection_domain.h  segment.h  util.h  util_projection_domain.h  util_sweep_line.h
src/cldc/include/geometry/serialize/export_structs/: curvilinear_coordinate_system_export_struct.h
src/cldc/include/geometry/serialize/public/: serialize_public.h
src/cldc/src/: curvilinear_coordinate_system.cc  path_segments.cc  projection_domain.cc  segment.cc  util.cc  util_projection_domain.cc  util_sweep_line.cc
src/cldc/src/serialize/: serialize_curvil_cs.cc
src/cldc/src/serialize/public/: serialize_public.cc
src/cost_functions/: CMakeLists.txt
src/cost_functions/include/: util.hpp
src/cost_functions/src/: CalculateDistanceToObstacleCost.cpp  CalculateLaneCenterOffsetCost.cpp  CalculateSteeringAngleCost.cpp  CalculateSteeringRateCost.cpp  CalculateYawCost.cpp
src/feasibility_functions/: CMakeLists.txt
src/feasibility_functions/src/: CheckVelocityConstraints.cpp
src/initial_state/include/: InputData.hpp
src/initial_state/src/: InputData.cpp
src/input_data/: CMakeLists.txt
src/input_data/include/: InputData.hpp
src/input_data/src/: InputData.cpp
src/trajectory_handler/: CMakeLists.txt
src/trajectory_handler/include/: TrajectoryHandler.hpp
src/trajectory_handler/src/: TrajectoryHandler.cpp
src/trajectory_sample/: CMakeLists.txt
src/trajectory_sample/include/: TrajectorySample.hpp  polynomial.hpp
src/trajectory_sample/src/: CoordinateSystemWrapper.cpp  FillCoordinates.cpp  TrajectorySample.cpp
